--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -106,6 +106,7 @@
     <addaction name="actionforward"/>
     <addaction name="actionShelf"/>
     <addaction name="actionLibrary"/>
+    <addaction name="actionAutoScroll"/>
    </widget>
    <addaction name="menuNote"/>
    <addaction name="menuTool"/>
@@ -205,6 +206,17 @@
    </property>
    <property name="shortcut">
     <string>L</string>
+   </property>
+  </action>
+  <action name="actionAutoScroll">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>自动滚屏</string>
+   </property>
+   <property name="shortcut">
+    <string>A</string>
    </property>
   </action>
  </widget>
